--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@tailwindcss/typography": "^0.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.3",
     "framer-motion": "^11.2.6",
+    "github-slugger": "^2.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
