--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
+    "shiki": "^1.12.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -73,6 +74,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.13.2",
+    "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "velite": "^0.1.1"
