--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
+    "sharp": "^0.33.4",
     "shiki": "^1.12.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
